syntax = "proto3";

package com.example.grpc;

message PingRequest{
  string message = 1;
  int64  timestamp = 2;
}

message PongResponse{
  string message = 1;
  int64  timestamp = 2;
}

service PingPongService{
  rpc pingPong(PingRequest) returns (PongResponse);
}
